--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provide_this: ^0.1.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: ^1.15.7
