--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,17 +2,17 @@ name: color_theme
 description: >-
   A color themeing solution with support for handling locally and
   globally applied themes, and the combination thereof.
-version: 0.0.3
+version: 1.0.0-nullsafety
 homepage: https://github.com/james-alex/color_theme
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_object_map: ^0.1.1
+  flutter_object_map: ^1.0.0-nullsafety
 
 dev_dependencies:
   test: ^1.15.7
